[package]
name = "toddaaro_screeps"
version = "0.0.5"
authors = ["toddaaro <social@aarontodd.name>"]
edition = "2018"

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.5"
screeps-game-api = { git = "https://github.com/rustyscreeps/screeps-game-api", branch = "master" }
rand = { version = "0.7.2", features = ["small_rng", "std"] }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
